<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/intro_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/intro_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lat_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/lat_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intro_label" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/na"
        app:layout_constraintStart_toEndOf="@id/lat_label"
        app:layout_constraintTop_toTopOf="@id/lat_label" />

    <TextView
        android:id="@+id/long_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/long_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lat_label" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/na"
        app:layout_constraintStart_toEndOf="@id/long_label"
        app:layout_constraintTop_toTopOf="@id/long_label" />


    <TextView
        android:id="@+id/accuracy_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/accuracy_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/long_label" />

    <TextView
        android:id="@+id/acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/na"
        app:layout_constraintStart_toEndOf="@id/accuracy_label"
        app:layout_constraintTop_toTopOf="@id/accuracy_label" />

    <TextView
        android:id="@+id/history_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_label"
        android:layout_marginTop="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accuracy_label" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/history_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_label">

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/time_header"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_lat"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:gravity="end"
            android:text="@string/lat_header"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_lon"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:gravity="end"
            android:text="@string/lon_header"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_acc"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:gravity="end"
            android:text="@string/acc_header"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:fadeScrollbars="false"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_header" />

</android.support.constraint.ConstraintLayout>